src/surface/app/style.less
.shy-surface {
    display        : flex;
    justify-content: flex-start;
    align-items    : stretch;
    width          : 100vw;
    height         : 100vh;
    position       : absolute;
    top            : 0px;
    left           : 0px;
    z-index        : 1;
    overflow       : hidden;


    &-content {
        flex-grow       : 1.0;
        flex-shrink     : 1;
        background-color: rgb(243, 243, 243);
        display         : flex;
        justify-content : stretch;
        align-items     : stretch;
        flex-direction  : column;
        height          : 100vh;

        &-head {
            flex-shrink: 0;
            flex-grow  : 0;
        }

        &-box {
            flex-grow      : 1.0;
            flex-shrink    : 1;
            display        : flex;
            justify-content: flex-start;
            align-items    : stretch;
        }
    }
    .shy-content {
        flex-grow       : 1.0;
        flex-shrink     : 1;
        background-color: rgb(243, 243, 243);
    }

    &-loading {
        display        : flex;
        justify-content: center;
        align-items    : center;
        width          : 100vw;
        height         : 100vh;
    }
}

.shy-wss {
    outline: none;
    .shy-ws {
        .shy-ws-profile {
            flex-grow  : 0;
            flex-shrink: 0;
        }

        >.shy-ws-items {
            flex-grow     : 1;
            // padding-bottom: 100px;
            overflow-y    : auto;
            overflow-y    : overlay;
            overflow-x    : hidden;
            box-sizing    : border-box;
            padding-top   : 15px;
        }
    }
}

.shy-supervisor-join-tip {
    height          : 100%;
    background-color: #e16259;
    display         : flex;
    color           : #fff;
    justify-content : center;
    align-items     : center;

    a {
        margin-left  : 10px;
        font-weight  : 600;
        padding      : 4px 8px;
        color        : #fff;
        display      : inline-block;
        border-radius: 3px;
        font-size    : 14px;
        border       : 1px solid #fff;
        cursor       : pointer;

        &:hover {
            background-color: lighten(#e16259, 10%);
        }

    }
}

